# pdfmerge

./: .flake8  .gitignore  README.md  pyproject.toml
pdfmerge/: pdfmerge.py
